# routes/users.js
@@ -1,11 +1,13 @@
+const { newsletterValidationRules, validate } = require('../validation')
+
 const router = require('express').Router();
 
 const usersController = require('../controller');
 
 // Register User
-router.post('/signup', usersController.signUp);
+router.post('/newslettersignup', newsletterValidationRules(), validate, usersController.signUp);
 
 // Login user 
-router.post("/login", usersController.logIn);
+// router.post("/login", usersController.logIn);
 
 module.exports = router;
